# bevy_new_3d_rpg

./: Cargo.toml  Cargo.toml.template  Makefile  README.md  README.md.template
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: config.ron  credits.ron  settings.ron
crates/asset_loading/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: camera.rs  dev_tools.rs  lib.rs  mood.rs
crates/game/src/camera/: third_person.rs
crates/models/src/: event_dispatch.rs  input.rs  pre_load.rs  primitives.rs  settings.rs  states.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
crates/scene/src/: skybox.rs
crates/screens/: Cargo.toml
crates/screens/src/: credits.rs  gameplay.rs  lib.rs  title.rs
crates/ui/: Cargo.toml
src/: main.rs
src/asset_loading/: mod.rs  tracking.rs
src/crates/: audio.rs  mod.rs
src/crates/asset_loading/: mod.rs
src/crates/game/: mod.rs
src/crates/models/: ext_traits.rs  mod.rs  palette.rs  primitives.rs  states.rs
src/crates/player/: mod.rs
src/crates/scene/: mod.rs  skybox.rs
src/crates/screens/: gameplay.rs  mod.rs  settings.rs
src/crates/ui/: interaction.rs  mod.rs
src/crates/ui/prefabs/: settings.rs
src/game/: dev_tools.rs  mod.rs  mood.rs
src/game/camera/: mod.rs
src/models/: event_dispatch.rs  input.rs  keybinding.rs  mod.rs  primitives.rs  settings.rs
src/player/: control.rs  mod.rs  sound.rs
src/scene/: mod.rs
src/screens/: gameplay.rs  mod.rs
src/ui/: interaction.rs  mod.rs
src/ui/prefabs/: keybind_editor.rs  settings.rs
