[package]
name = "game"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

# TODO: figure out the best way to enable stuff like inspector or ui debug option only in dev builds
[features]
default = ["dev_native", "top_down_camera"]
dev_native = [ "bevy-inspector-egui" ]
top_down_camera = []

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
player = { path = "../player" }
models = { path = "../models" }
scene = { path = "../scene" }
ui = { path = "../ui" }

bevy-inspector-egui = { version = "0.31.0", optional = true }

avian3d.workspace = true
bevy.workspace = true
bevy_seedling.workspace = true
bevy_enhanced_input.workspace = true
bevy_third_person_camera.workspace = true
rand.workspace = true

[lints]
workspace = true
