[package]
name = "game"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

# TODO: figure out the best way to enable stuff like inspector or ui debug option only in dev builds
[features]
default = ["dev_native", "top_down"]
dev_native = [ "bevy-inspector-egui" ]
third_person = ["bevy_third_person_camera"]
top_down = ["bevy_top_down_camera"]

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
player = { path = "../player" }
models = { path = "../models" }
scene = { path = "../scene" }
ui = { path = "../ui" }

bevy_third_person_camera = { workspace = true, optional = true }
bevy_top_down_camera = { workspace = true, optional = true }

bevy-inspector-egui = { version = "0.31.0", optional = true }
avian3d.workspace = true
bevy.workspace = true
bevy_seedling.workspace = true
bevy_enhanced_input.workspace = true
rand.workspace = true

[lints]
workspace = true
