[package]
name = "player"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[features]
# NOTE: This is just to showcase top down or third person camera views,
# if you have chosen the one for your game you can just delete the features block along with unnecessary dependency
default = ["top_down"]
third_person = ["bevy_third_person_camera"]
top_down = ["bevy_top_down_camera"]

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
models = { path = "../models" }

bevy_third_person_camera = { workspace = true, optional = true }
bevy_top_down_camera = { workspace = true, optional = true }

avian3d.workspace = true
bevy.workspace = true
bevy_seedling.workspace = true
bevy-tnua.workspace = true
bevy-tnua-avian3d.workspace = true
bevy_enhanced_input.workspace = true
rand.workspace = true

[lints]
workspace = true
